Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-06-20 Kimmo
 BUG: [ 1505763 ] Crash after closing file compare window
  Src: MergeEditView.cpp

2006-06-19 Gal
 RFE: [ 1499245 ] Ruby Syntax Highlighting
  Src: Merge.dsp
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h ruby.cpp

2006-06-13 Gal
 BUG: [ 1494776 ] Can't rename files if '|' seperator exists
  Src: DirView.h DirView.cpp DirActions.cpp

2006-06-12 Kimmo
 BUG: [ 1486434 ] Copy Pathnames for right-only dir copies parent dir only
  Src: DirView.cpp

2006-05-31 Kimmo
 PATCH: [ 1483544 ] New compare method: by date and size
  Src: DiffWrapper.h DirScan.cpp Merge.rc PropCompare.cpp resource.h
  Src/Languages/*: Merge*.rc

2006-05-31 Takashi
 BUG: [ 1496066 ] WinMerge crashed with those files
  Src: GhostTextView.cpp GhostTextView.h

2006-05-31 Kimmo
 BUG: [ 1494610 ] Wrong selection in ccrystalview2.cpp
  Src/editlib: ccrystaltextview2.cpp
 PATCH: [ 1497817 ] Cleanup CCrystalTextView::GetLineBySubLine
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h

2006-05-30 Kimmo
 PATCH: [ 1497154 ] Fix memory leak in wordwrap code
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1497068 ] Initialize cursorpositions in GhostTextView
  Src: GhostTextView.h
 PATCH: [ 1497147 ] Cleanup CCrystalTextView::ClientToText
  Src/editlib: ccrystaltextview.cpp

2006-05-25 Kimmo
 BUG: [ 1494610 ] Wrong selection in ccrystalview2.cpp
  Analyzed by Mallato
  Src/editlib: ccrystaltextview2.cpp

2006-05-25 Tim
 PATCH: [ 1495017 ] Translate 'Textcolors' options to German
  Src/Languages/German: MergeGerman.rc

2006-05-25 Kimmo
 PATCH: [ 1494627 ] Skip processing empty paths in Open dialog
  Src: OpenDlg.cpp
 Doxygen comments and trivial cleanups for paths.cpp & paths.h
  Src: paths.cpp paths.h

2006-05-24 Kimmo
 PATCH: [ 1493742 ] Limit vertical scrolling to last line of files
  Src/editlib: ccrystaltextview.cpp