@@ -84,7 +84,6 @@ private:
 	afx_msg void OnLvnItemchangedFilterfileList(NMHDR *pNMHDR, LRESULT *pResult);
 	afx_msg void OnInfoTip(NMHDR * pNMHDR, LRESULT * pResult);
 	afx_msg void OnMouseMove(UINT nFlags, CPoint point);
-	afx_msg void OnBnClickedReload();
 	afx_msg void OnBnClickedFilterfileTestButton();
 	afx_msg void OnBnClickedFilterfileNewbutton();
 	afx_msg void OnBnClickedFilterfileDelete();
